# organizer

./: .gitignore  AGENTS.md  README.md  agent_vector_db.md  file_organizer_agent.md  file_organizer_db.py  organizer.config.json  orgnizer.config.template.json  pyproject.toml
agent_utils/: __init__.py  agent_vector_db.py  folder_tree.py
file_analysis_agent/: README.md  __init__.py  agent.py  cache.py  config.json  converter.py  prompt.md
file_analysis_agent/agent_tools/: __init__.py  analyzer.py  config.py  tools.py
file_organization_decider_agent/: __init__.py  agent.py  prompt.md  tool-test.py
file_organization_decider_agent/agent_tools/: __init__.py  tools.py
file_organization_planner_agent/: __init__.py  agent.py  prompt.md  tool-test.py
file_organization_planner_agent/agent_tools/: __init__.py  tools.py
foldermate/: app.py  cli.py
foldermate/static/: index.html
tests/: test_agent_vector_db.py  test_app_api.py  test_config_persistence.py  test_decider_tools.py  test_default_config_path.py  test_logging_path.py  test_planner_tools.py  test_scan_api.py  test_tools.py
tests/data/: sample.txt
