[project]
name = "file-analysis-agent"
version = "0.1.0"
description = "Tools for converting documents to Markdown and inspecting them"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-ai",
    "tiktoken",
    "diskcache",
    "sqlite-vec",
    "fastembed",
    "numpy",
    "pysqlite3-binary",
]

[project.optional-dependencies]
docling = ["docling"]
foldermate = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
]

[project.scripts]
foldermate = "foldermate.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "agent_utils",
    "file_analysis_agent",
    "file_organization_planner_agent",
    "file_organization_decider_agent",
    "foldermate",
]
